--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lit-element": "^3.0.2"
   },
   "devDependencies": {
+    "@open-wc/testing": "^3.0.0-next.5",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
   }
